adjusted amiconfig-cernvm package to git repositories

--- a/amiconfig-cernvm/Makefile
+++ b/amiconfig-cernvm/Makefile
@@ -2,13 +2,13 @@
 include $(TOP)/config.mk
 include $(TOP)/generic.mk
 
-SVN_SRC = $(shell basename `cat source`)
+GIT_SRC = $(shell basename `cat source` | sed 's/\.git$$//')
 
-$(SVN_SRC): source
-	svn co `cat source`
+$(GIT_SRC): source
+	git clone `cat source`
 
-$(SOURCE_TARBALL): $(SVN_SRC) | $(RPMTOP)/SOURCES
-	cd $(SVN_SRC); \
+$(SOURCE_TARBALL): $(GIT_SRC) | $(RPMTOP)/SOURCES
+	cd $(GIT_SRC)/cernvm; \
 	  tar -cvz --exclude=.svn --transform=s,^.,$(NAME)-$(VERSION), --show-transformed-names -f - . > $(SOURCE_TARBALL)	
 
 $(SPEC_FILE): amiconfig-cernvm.spec version release | $(RPMTOP)/SPECS
