--- a/cernvm-config/Makefile
+++ b/cernvm-config/Makefile
@@ -3,5 +3,5 @@ include $(TOP)/config.mk
 include $(TOP)/generic.mk
 SOURCE_DIST = ./usr ./etc ./.ucernvm_bootstrap ./.ucernvm_pinfiles
 include $(TOP)/template-spec.mk
-include $(TOP)/from-svn.mk
+include $(TOP)/from-git.mk
 
