adjusted cernvm-online-guest package to git repositories

--- a/cernvm-pam/Makefile
+++ b/cernvm-pam/Makefile
@@ -2,14 +2,14 @@
 include $(TOP)/config.mk
 include $(TOP)/generic.mk
 
-SVN_SRC = $(shell basename `cat source`)
+GIT_SRC = $(shell basename `cat source` | sed 's/\.git$$//')
 
-$(SVN_SRC): source
-	svn co `cat source`
+$(GIT_SRC): source
+	git clone `cat source`
 
-$(SOURCE_TARBALL): $(SVN_SRC) | $(RPMTOP)/SOURCES
-	cd $(SVN_SRC); \
-	  tar -cvz --exclude=.svn --transform=s,^.,$(NAME)-$(VERSION), --show-transformed-names -f - . > $(SOURCE_TARBALL)	
+$(SOURCE_TARBALL): $(GIT_SRC) | $(RPMTOP)/SOURCES
+	cd $(GIT_SRC); \
+	  tar -cvz --exclude=.svn --transform=s,^.,$(NAME)-$(VERSION), --show-transformed-names -f - ./Makefile ./*.c ./*.sh > $(SOURCE_TARBALL)	
 
 $(SPEC_FILE): cernvm-pam.spec version release | $(RPMTOP)/SPECS
 	cat cernvm-pam.spec | \
