--- a/ec2-ami-tools/Makefile
+++ b/ec2-ami-tools/Makefile
@@ -4,7 +4,7 @@ include $(TOP)/config.mk
 EXTRA_SOURCES=direct/usr/lib/ec2/bin
 direct/usr/lib/ec2/bin: ec2-ami-tools-$(VERSION).zip
 	unzip ec2-ami-tools-$(VERSION).zip
-	cp -av ec2-ami-tools-$(VERSION)/bin ec2-ami-tools-$(VERSION)/lib ec2-ami-tools-$(VERSION)/etc direct/usr/lib/ec2/
+	cp -av ec2-ami-tools-$(VERSION)/license.txt ec2-ami-tools-$(VERSION)/bin ec2-ami-tools-$(VERSION)/lib ec2-ami-tools-$(VERSION)/etc direct/usr/lib/ec2/
 	rm -rf ec2-ami-tools-$(VERSION)
 	touch direct/usr/lib/ec2/bin
 ec2-ami-tools-$(VERSION).zip:
