--- a/ec2-ami-tools/Makefile
+++ b/ec2-ami-tools/Makefile
@@ -4,7 +4,8 @@ include $(TOP)/config.mk
 EXTRA_SOURCES=direct/usr/lib/ec2/bin
 direct/usr/lib/ec2/bin: ec2-ami-tools-$(VERSION).zip
 	unzip ec2-ami-tools-$(VERSION).zip
-	cp -av ec2-ami-tools-$(VERSION)/license.txt ec2-ami-tools-$(VERSION)/bin ec2-ami-tools-$(VERSION)/lib ec2-ami-tools-$(VERSION)/etc direct/usr/lib/ec2/
+	cp -av ec2-ami-tools-$(VERSION)/bin ec2-ami-tools-$(VERSION)/lib ec2-ami-tools-$(VERSION)/etc direct/usr/lib/ec2/
+	cp -v ec2-ami-tools-$(VERSION)/license.txt direct/usr/lib/ec2/license-c2-ami-tools.txt
 	rm -rf ec2-ami-tools-$(VERSION)
 	touch direct/usr/lib/ec2/bin
 ec2-ami-tools-$(VERSION).zip:
