--- a/cernvm-update/Makefile
+++ b/cernvm-update/Makefile
@@ -2,5 +2,6 @@
 include $(TOP)/config.mk
 include $(TOP)/generic.mk
 include $(TOP)/template-spec.mk
-include $(TOP)/from-svn.mk
+SOURCE_DIST = ./usr ./etc ./var
+include $(TOP)/from-git.mk
 
