proper cloud-scheduler package

--- a/cloud-scheduler/Makefile
+++ b/cloud-scheduler/Makefile
@@ -1,9 +1,18 @@
 
 include $(TOP)/config.mk
 
-$(NAME)-$(VERSION):
-	wget -O $(VERSION).zip https://github.com/hep-gc/$(NAME)/archive/$(VERSION).zip
-	unzip $(VERSION).zip
+EXTRA_SOURCES = $(RPMTOP)/SOURCES/cloud_admin
+include $(TOP)/generic.mk
 
-include $(TOP)/from-python.mk
+$(SOURCE_TARBALL): | $(RPMTOP)/SOURCES
+	wget -O tmp.tar.gz http://pypi.python.org/packages/source/c/$(NAME)/$(NAME)-$(VERSION).tar.gz --no-check-certificate
+	mv tmp.tar.gz $(SOURCE_TARBALL)
 
+$(EXTRA_SOURCES): | $(RPMTOP)/SOURCES
+	curl https://raw.github.com/hep-gc/$(NAME)/$(VERSION)/cloud_admin > $(EXTRA_SOURCES)
+
+$(SPEC_FILE): cloud-scheduler.spec version release | $(RPMTOP)/SPECS
+	cat cloud-scheduler.spec | \
+	  sed -e "s/^Version: AUTO/Version: $(VERSION)/" | \
+	  sed -e "s/^Release: AUTO/Release: $(RELEASE)/" \
+	  > $(SPEC_FILE)
