fix default config

--- a/amiconfig-rpath/default.cfg
+++ b/amiconfig-rpath/default.cfg
@@ -1,7 +1,7 @@
 [general]
 
 # plugins which are enabled by default and cannot be switched off by the user 
-enabled_plugins = rootsshkeys cernvm
+enabled_plugins=rootsshkeys,cernvm
 
 # plugins which are disbled by default and cannot be switched on by the user
 disabled_plugins=
