fixing ec2 tools

--- a/ec2-ami-tools/Makefile
+++ b/ec2-ami-tools/Makefile
@@ -1,13 +1,13 @@
 
 include $(TOP)/config.mk
 
-EXTRA_SOURCES=direct/usr/lib/ec2/bin
-direct/usr/lib/ec2/bin: ec2-ami-tools-$(VERSION).zip
+EXTRA_SOURCES=src/usr/lib/ec2/bin
+src/usr/lib/ec2/bin: ec2-ami-tools-$(VERSION).zip
 	unzip ec2-ami-tools-$(VERSION).zip
-	cp -av ec2-ami-tools-$(VERSION)/bin ec2-ami-tools-$(VERSION)/lib ec2-ami-tools-$(VERSION)/etc direct/usr/lib/ec2/
-	cp -v ec2-ami-tools-$(VERSION)/license.txt direct/usr/lib/ec2/license-ec2-ami-tools.txt
+	cp -av ec2-ami-tools-$(VERSION)/bin ec2-ami-tools-$(VERSION)/lib ec2-ami-tools-$(VERSION)/etc src/usr/lib/ec2/
+	cp -v ec2-ami-tools-$(VERSION)/license.txt src/usr/lib/ec2/license-ec2-ami-tools.txt
 	rm -rf ec2-ami-tools-$(VERSION)
-	touch direct/usr/lib/ec2/bin
+	touch src/usr/lib/ec2/bin
 ec2-ami-tools-$(VERSION).zip:
 	curl http://ecsft.cern.ch/dist/cernvm/ec2-ami-tools-$(VERSION).zip > ec2-ami-tools-$(VERSION).zip
 
