--- a/eos-fuse/Makefile
+++ b/eos-fuse/Makefile
@@ -2,4 +2,4 @@
 include $(TOP)/config.mk
 
 $(RPM):
-	curl http://eos.cern.ch/rpms/eos-0.2/slc-6-x86_64/eos-fuse-$(VERSION)-$(RELEASE).x86_64.rpm > $(RPM)
+	curl http://eos.cern.ch/rpms/eos-beryl/slc-6-x86_64/eos-fuse-$(VERSION)-$(RELEASE).x86_64.rpm > $(RPM)
