--- a/CERN-CA-certs/Makefile
+++ b/CERN-CA-certs/Makefile
@@ -3,4 +3,4 @@ include $(TOP)/config.mk
 
 $(RPM):
 	mkdir -p `dirname $(RPM)`
-	cat CERN-CA-certs-$(VERSION)-$(RELEASE).slc6.noarch.rpm > $(RPM)
+	cat CERN-CA-certs-$(VERSION)-$(RELEASE).el7.cern.noarch.rpm > $(RPM)
