--- a/slim/slim.conf
+++ b/slim/slim.conf
@@ -33,7 +33,7 @@ authfile           /var/run/slim.auth
 # to adjust the command according to your preferred shell,
 # i.e. for freebsd use:
 # login_cmd           exec /bin/sh - ~/.xinitrc %session
-login_cmd           exec bash -login /usr/bin/startxfce4
+login_cmd           exec ck-launch-session /bin/bash -login /etc/X11/Xsession %session
 
 # Commands executed when starting and exiting a session.
 # They can be used for registering a X11 session with
