--- a/open-vm-tools/Makefile
+++ b/open-vm-tools/Makefile
@@ -4,11 +4,11 @@ EXTRA_SOURCES = $(RPMTOP)/SOURCES/vmware-guestd.init
 EXTRA_SOURCES2 = $(RPMTOP)/SOURCES/network.patch
 include $(TOP)/generic.mk
 
-$(NAME)-$(VERSION)-1280544.tar.gz:
-	curl http://ecsft.cern.ch/dist/cernvm/$(NAME)-$(VERSION)-1280544.tar.gz > $(NAME)-$(VERSION)-1280544.tar.gz
+$(NAME)-$(VERSION)-3000743.tar.gz:
+	curl https://ecsft.cern.ch/dist/cernvm/$(NAME)-$(VERSION)-3000743.tar.gz > $(NAME)-$(VERSION)-3000743.tar.gz
 
-$(SOURCE_TARBALL): $(NAME)-$(VERSION)-1280544.tar.gz | $(RPMTOP)/SOURCES
-	cat $(NAME)-$(VERSION)-1280544.tar.gz > $(SOURCE_TARBALL)	
+$(SOURCE_TARBALL): $(NAME)-$(VERSION)-3000743.tar.gz | $(RPMTOP)/SOURCES
+	cat $(NAME)-$(VERSION)-3000743.tar.gz > $(SOURCE_TARBALL)	
 
 $(EXTRA_SOURCES): $(EXTRA_SOURCES2) | $(RPMTOP)/SOURCES
 	cat vmware-guestd.init > $(EXTRA_SOURCES)
