--- a/condor/Makefile
+++ b/condor/Makefile
@@ -2,4 +2,4 @@
 include $(TOP)/config.mk
 
 $(RPM):
-	curl http://research.cs.wisc.edu/htcondor/yum/stable/rhel6/condor-$(VERSION)-$(RELEASE).rhel6.3.x86_64.rpm > $(RPM)
+	curl http://research.cs.wisc.edu/htcondor/yum/stable/rhel6/condor-$(VERSION)-$(RELEASE).el6.x86_64.rpm > $(RPM)
