--- a/WALinuxAgent/Makefile
+++ b/WALinuxAgent/Makefile
@@ -7,5 +7,6 @@ include $(TOP)/template-spec.mk
 include $(TOP)/from-git.mk
 
 dist/usr/bin/pubkey2ssh: pubkey2ssh.c
+	mkdir -p dist/usr/bin
 	gcc -o dist/usr/bin/pubkey2ssh pubkey2ssh.c -lcrypto
 
