--- a/cernvm-theme/Makefile
+++ b/cernvm-theme/Makefile
@@ -2,6 +2,6 @@
 include $(TOP)/config.mk
 include $(TOP)/generic.mk
 include $(TOP)/template-spec.mk
-SOURCE_DIST = ./usr ./etc
+SOURCE_DIST = ./usr ./etc ./root
 include $(TOP)/from-git.mk
 
