--- a/singularity/Makefile
+++ b/singularity/Makefile
@@ -2,4 +2,4 @@
 include $(TOP)/config.mk
 
 $(RPM):
-	wget -O $(RPM) http://linuxsoft.cern.ch/wlcg/centos7/x86_64/$(NAME)-$(VERSION)-$(RELEASE).$(ARCH).rpm
+	wget -O $(RPM) http://linuxsoft.cern.ch/wlcg/centos7/x86_64/$(NAME)-$(VERSION)-$(RELEASE).el7.$(ARCH).rpm
