--- a/cernvm-config/Makefile
+++ b/cernvm-config/Makefile
@@ -1,7 +1,8 @@
 
 include $(TOP)/config.mk
 include $(TOP)/generic.mk
-SOURCE_DIST = ./usr ./etc ./.ucernvm_bootstrap ./.ucernvm_pinfiles
+#SOURCE_DIST = ./usr ./etc ./.ucernvm_bootstrap ./.ucernvm_pinfiles
+SOURCE_DIST = ./.ucernvm_bootstrap ./etc/cernvm/postinstall ./etc/cloud ./usr/lib/systemd/system/cloud-*
 include $(TOP)/template-spec.mk
 include $(TOP)/from-git.mk
 
